Correção da documentação.
